<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="energysaver.com.energykinect.BuildingEnvelopeDetails"
    tools:showIn="@layout/activity_building_envelope_details"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/windowToWallRatioWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <EditText
            android:id="@+id/windowToWallRatio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/window_to_wall_ratio"
            android:maxLength="5"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/glazingSolarHeatGainCoefficientWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="4dp">
        <EditText
            android:id="@+id/glazingSolarHeatGainCoefficient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/glazing_solar_heat_gain_coefficient"
            android:maxLength="5"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/glazingUFactorWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="4dp">
        <EditText
            android:id="@+id/glazingUFactor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/glazing_u_factor"
            android:maxLength="5"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/visibleLightTransmittanceWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="4dp">
        <EditText
            android:id="@+id/visibleLightTransmittance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/visible_light_transmittance"
            android:maxLength="5"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/airLeakageRatioWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="4dp">
        <EditText
            android:id="@+id/airLeakageRatio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/air_leakage_rates"
            android:maxLength="5"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/skylightSolarHeatCoefficientWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="4dp">
        <EditText
            android:id="@+id/skylightSolarHeatCoefficient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/skylight_solar_heat_gain_coefficient"
            android:maxLength="5"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/skylightUFactorWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="4dp">
        <EditText
            android:id="@+id/skylightUFactor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/skylight_u_factor"
            android:maxLength="5"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/roofUFactorWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="4dp">
        <EditText
            android:id="@+id/roofUFactor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/roof_u_factor"
            android:maxLength="5"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/roofInsulationTypeWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="4dp">
        <EditText
            android:id="@+id/roofInsulationType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/roof_insulation_type"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/roofThicknessWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="4dp">
        <EditText
            android:id="@+id/roofThickness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/roof_thickness"
            android:maxLength="5"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/roofRValueWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="4dp">
        <EditText
            android:id="@+id/roofRValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/roof_r_value"
            android:maxLength="5"/>
    </android.support.design.widget.TextInputLayout>


    <Button
        android:text="@string/building_envelope_next_screen"
        android:layout_gravity="bottom|end"
        android:textColor="#ffffff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="onBuildingEnvelopeScreenClick"/>

</LinearLayout>
</ScrollView>