<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="energysaver.com.energykinect.AgentDetailsActivity"
    tools:showIn="@layout/activity_agent_details">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/agentNameWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <EditText
            android:id="@+id/agentName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/agent_name"

            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/agentEmailWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/agentNameWrapper"
        android:layout_marginTop="4dp">
        <EditText
            android:id="@+id/agentEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/agent_email"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/agentCompanyWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/agentEmailWrapper"
        android:layout_marginTop="4dp">
        <EditText
            android:id="@+id/agentCompany"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/agent_company"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/agentMobileWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/agentCompanyWrapper"
        android:layout_marginTop="4dp">
        <EditText
            android:id="@+id/agentMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/agent_mobile"
            android:maxLength="10"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:text="@string/agent_name_next_screen"
        android:layout_alignParentRight="true"
        android:textColor="#ffffff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/agentMobileWrapper"
        android:layout_marginTop="10dp"
        android:onClick="onAgentDetailsScreenClick"/>

</RelativeLayout>
