<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="energysaver.com.energykinect.OtherDetailsPartOneActivity"
    tools:showIn="@layout/activity_other_details_part_one"
    android:shrinkColumns="*"
    android:stretchColumns="*">


    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:layout_span="3"
            android:text="@string/roofs"
            android:textSize="25sp" />

    </TableRow>

    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        >
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="center_horizontal"
            android:layout_span="3"
            android:text="@string/insulation_entrirely_above_deck"
            android:textSize="20sp"
            android:padding="3dip"
            android:background="@drawable/textview_cell_shape"/>

    </TableRow>

    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

            <EditText
                android:id="@+id/roofInsulationListGrossArea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/list_gross_area"
                android:layout_weight="1"
                android:background="@drawable/edittext_cell_shape"
                />

            <EditText
                android:id="@+id/roofInsulationRValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/r_value"
                android:layout_weight="1"
                />

    </TableRow>

    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="center_horizontal"
            android:layout_span="3"
            android:text="@string/metal_buildings"
            android:textSize="20sp"
            android:padding="3dip" />

    </TableRow>

    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        >

            <EditText
                android:id="@+id/roofMetalBuildingsListGrossValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/list_gross_area"
                android:layout_weight="1"
                />


            <EditText
                android:id="@+id/roofMetalBuildingsRValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/r_value"
                android:layout_weight="1"
                />

    </TableRow>

    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="center_horizontal"
            android:layout_span="3"
            android:text="@string/attic_and_other"
            android:textSize="20sp"
            android:padding="3dip" />

    </TableRow>

    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <EditText
            android:id="@+id/roofAtticAndOtherListGrossValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/list_gross_area"
            android:layout_weight="1"
            />


        <EditText
            android:id="@+id/roofAtticAndOtherRValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/r_value"
            android:layout_weight="1"
            />

    </TableRow>


        <Button
            android:text="@string/agent_name_next_screen"
            android:layout_gravity="bottom|end"
            android:textColor="#ffffff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="onOtherDetailsPartOneClick"
            />


</TableLayout>
